@@ -3,6 +3,7 @@ Changelog for logilab database package
 
 --
     * [fti] exclude numbers from stop words in fti parser (closes: #69471)
+    * fix backup/restore commands for sqlite backend (closes: #69607)
 
 2011-06-09  --  1.6.0
     * new CAST function
